--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,6 @@
 ErrorDocument 404 /404.html
+
+AuthType Basic  
+AuthName "restricted area"  
+AuthUserFile  /velocitaracing.github.io/resources/.htpasswd
+require valid-user
