--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -1,4 +1,4 @@
 AuthType Basic  
 AuthName "restricted area"  
-AuthUserFile  ../../velocitaracing.github.io/resources/ .htpasswd
+AuthUserFile  ..\..\velocitaracing.github.io\resources\ .htpasswd
 require valid-user
