--- a/resources/.htaccess
+++ b/resources/.htaccess
@@ -1,3 +1,9 @@
+<Directory  ..\..\velocitaracing.github.io\resources\ .htpasswd  >
+    AllowOverride AuthConfig
+    ...
+</Directory>
+
+
 AuthType Basic  
 AuthName "restricted area"  
 AuthUserFile  ..\..\velocitaracing.github.io\resources\ .htpasswd
