--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 ErrorDocument 404 /404.html
 
-RedirectMatch 301 ^/blog https://velocitaracing.github.io/404.html
+RedirectMatch 301 ^/blog /404.html
